--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,17 +3,21 @@ cmake_minimum_required(VERSION 3.12)
 project(Renderer)
 
 # specify the C++ standard
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-#add_subdirectory(pbrt)
+add_subdirectory(pbrt)
+add_library(pbrt
+    pbrt/shapes.cpp
+)
 
 add_executable(Renderer main.cpp)
 
-#target_link_libraries(
-    #Renderer PUBLIC
-    #pbrt
-#)
+target_link_libraries(
+    Renderer PUBLIC
+    pbrt
+)
+
 target_include_directories(
     Renderer PUBLIC
     "${PROJECT_BINARY_DIR}"
