Added SimpleAgregate (up to Chapter 6 of RTW

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_subdirectory(pbrt)
 add_library(pbrt
     pbrt/shapes.cpp
+    pbrt/cpu/primitive.cpp
 )
 
 add_executable(Renderer main.cpp)
