Made include paths reletive to pbrt directory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,10 +7,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(pbrt)
-add_library(pbrt
-    pbrt/shapes.cpp
-    pbrt/primitive.cpp
-)
+#add_library(pbrt
+    #pbrt/shapes.cpp
+    #pbrt/primitive.cpp
+#)
 
 add_executable(Renderer main.cpp)
 
@@ -22,19 +22,19 @@ target_link_libraries(
 target_include_directories(
     Renderer PUBLIC
     "${PROJECT_BINARY_DIR}"
-    #"${PROJECT_SOURCE_DIR}/pbrt"
+    "${PROJECT_SOURCE_DIR}"
 )
 
 # DEBUG
-add_executable(Debug pbrt/test/sizes.cpp)
+#add_executable(Debug pbrt/test/sizes.cpp)
 
-target_link_libraries(
-    Debug PUBLIC
-    pbrt
-)
+#target_link_libraries(
+    #Debug PUBLIC
+    #pbrt
+#)
 
-target_include_directories(
-    Debug PUBLIC
-    "${PROJECT_BINARY_DIR}"
-    #"${PROJECT_SOURCE_DIR}/pbrt"
-)
+#target_include_directories(
+    #Debug PUBLIC
+    #"${PROJECT_BINARY_DIR}"
+    ##"${PROJECT_SOURCE_DIR}/pbrt"
+#)
