Fixed integrator with new DisplayWindow class.  Added methods for imageData access

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
-#set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS "-ltbb")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
@@ -26,7 +26,7 @@ find_package(
     COMPONENTS SDL3-shared
 )
 
-add_executable(Renderer WIN32 display_example.cpp)
+add_executable(Renderer WIN32 main.cpp)
 
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 target_link_libraries(
