--- a/src/pbrt/CMakeLists.txt
+++ b/src/pbrt/CMakeLists.txt
@@ -1,7 +1,9 @@
+add_subdirectory(util)
 add_library(pbrt
     shapes.cpp
     primitive.cpp
     integrator.cpp
+    util/parallel.cpp
 )
 
 target_include_directories(
