Added transformation code.  Have not tested whether it successfully transforms objects

--- a/src/pbrt/CMakeLists.txt
+++ b/src/pbrt/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(pbrt
     integrator.cpp
     util/parallel.cpp
     util/buffercache.cpp
+    math/math.cpp
 )
 
 target_include_directories(
