Transforms seem to work

--- a/src/pbrt/CMakeLists.txt
+++ b/src/pbrt/CMakeLists.txt
@@ -3,9 +3,10 @@ add_library(pbrt
     shapes.cpp
     aggregates.cpp
     integrator.cpp
-    util/parallel.cpp
-    util/buffercache.cpp
     math/math.cpp
+    util/buffercache.cpp
+    util/parallel.cpp
+    util/transform.cpp
 )
 
 target_include_directories(
